fix supervisees dropdown to work with overflow

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -1875,6 +1875,20 @@ table>tbody>tr.voice_pad>td {
   width: 100%;
   height: 100%;
 }
+.supervisee_list {
+  &.tall {
+    max-height: 200px;
+    overflow: auto;
+    .supervisee_nav {
+      position: static;
+      .dropdown-menu {
+        left: inherit;
+        top: calc(100% - 20px);
+        width: 80%;
+      }
+    }
+  }
+}
 .supervisee_nav {
   width: 100%;
   a.btn {
@@ -1889,6 +1903,9 @@ table>tbody>tr.voice_pad>td {
     height: 51px;
     width:  20%;
     width: calc(60px);
+  }
+  .dropdown-menu {
+    width: 100%;
   }
 }
 table tr.long_delay td {
